plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.7' apply false
    id 'io.spring.dependency-management' version '1.1.7'
    id 'io.freefair.lombok' version '8.10.2' apply false
    id 'jacoco'
}

allprojects {
    group = 'com.company'
    version = '0.0.1-SNAPSHOT'

    repositories {
        maven { url 'https://maven.egovframe.go.kr/maven/' }
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'io.freefair.lombok'
    apply plugin: 'jacoco'
    
    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.compilerArgs << "-parameters"
        // Enable warnings to fix them
        options.deprecation = true
        options.warnings = true
        options.compilerArgs << "-Xlint:deprecation"
        options.compilerArgs << "-Xlint:unchecked"
        options.compilerArgs << "-Xlint:-processing"
        
        // Lombok 어노테이션 프로세서가 제대로 동작하도록 설정
        options.annotationProcessorPath = configurations.annotationProcessor
    }
    
    // annotationProcessor 와 compileOnly 분리 (Lombok 활성화를 위해)
    // configurations {
    //     compileOnly {
    //         extendsFrom annotationProcessor
    //     }
    // }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:3.3.7"
        }
    }

    dependencies {
        // Lombok - io.freefair.lombok 8.10 플러그인이 자동으로 처리함

        // Fix for: javax.annotation.meta.When not found
        implementation 'com.google.code.findbugs:jsr305:3.0.2'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    test {
        useJUnitPlatform()
        finalizedBy jacocoTestReport // test 작업 완료 후 jacocoTestReport 실행
    }

    jacoco {
        toolVersion = "0.8.12"
    }

    jacocoTestReport {
        dependsOn test
        reports {
            xml.required = true
            csv.required = false
            html.required = true
        }
        afterEvaluate {
            classDirectories.setFrom(files(classDirectories.files.collect {
                fileTree(dir: it, exclude: [
                        "**/Q*",
                        "**/*QClass*",
                        "**/D*" // DTOs if needed
                ])
            }))
        }
    }

    jacocoTestCoverageVerification {
        violationRules {
            rule {
                element = 'CLASS'
                limit {
                    counter = 'LINE'
                    value = 'COVEREDRATIO'
                    minimum = 0.50 // 최소 커버리지 50% (조정 가능)
                }
            }
        }
    }
}
